--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-email/components": "^0.5.3",
     "@tailwindcss/vite": "^4.1.11",
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "resend": "^6.1.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
